--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -30,14 +30,14 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://Scenes/Game.tscn")
 current_scene="res://Scenes/Game.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/handPointer.gd", "res://Scripts/handTracker.gd"]
-selected_script="res://Scripts/handPointer.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=70
 list_split_offset=0
